HRU 5869 menu alignment issue

--- a/web-app/css/aurora-menu.css
+++ b/web-app/css/aurora-menu.css
@@ -4,9 +4,8 @@
 
 #menuContainer{
     height:90%;
-   /* max-height: 100%;*/
     display:none;
-    top:5.859375%;
+    top:7.859375%;
     width:25.25%;
     background-color: #FFFFFF;
     box-shadow: 0 1px 7px #000000;
@@ -62,23 +61,20 @@
 
 #menu ul>li {
     border-bottom: 1px solid #D0DBDE;
-    height: 4.8828125%;
-    margin:0px;
-    padding:0px;
-    width:100%;
+   padding: 0.5em 0.25em 0.5em 0.25em;
 }
 
 .menu-item  {
-    background-color: #FFFFFF;
     margin-left: 1%;
     margin-right: 1%;
     height:auto;
     top: 20%;
     position: relative;
+    display: block;
 }
 
 #menu .menu-text    {
-    float:left;
+    display: inline-block;
 }
 
 #menu .menu-text, #menu .menu-subheader-text{
@@ -88,17 +84,11 @@
     font-family:"Open Sans";
 }
 
-#menu .menu-text{
-    word-wrap: break-word;
-}
-
 #menu .menu-subheader-text  {
-    margin-left:2%;
-    float:left;
+    margin-left:6%;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
-
 
 #menu ul li:hover{
     background-color: #F3FCFF;
@@ -106,11 +96,14 @@
 }
 
 #menu .menu-icon    {
-    background:url(images/arrow-right.svg) no-repeat center center;
-    background-size:0.625em 1.125em;
+    background:url(images/arrow-right.svg) no-repeat center;
+    background-size: 0.625em 1.125em;
     float:right;
     height:1.125em;
     width:0.625em;
+    margin-right: 0.5em ;
+    display: inline-block;
+
 }
 
 
@@ -139,7 +132,7 @@ and (max-width:767px){
     }
     #menu ul>li {
         border-bottom: 1px solid #D0DBDE;
-      height: 7.74647887%;
+        padding: 0.5em 0.25em 0.5em 0.25em;
     }
 
 
@@ -170,7 +163,7 @@ and (orientation : landscape)   {
         width:1em;
     }
     .menu-item{
-        min-height: 7.74647887%;
+        padding: 0.5em 0.25em 0.5em 0.25em;
     }
 }
 
@@ -195,7 +188,7 @@ and (orientation : portrait)   {
         width:1em;
     }
     .menu-item{
-        min-height: 7.74647887%;
+        padding: 0.5em 0.25em 0.5em 0.25em;
     }
 }
 
@@ -204,39 +197,18 @@ and (orientation : portrait)   {
 and (min-width:768px)
 and (max-width:1024px){
     #menuContainer   {
-        height: 90%;
+        height: 92%;
         width: 50.25%;
-        top:7.6436%;
+        top: 6.859375%;
     }
     #menu ul>li {
-        height: 6.510416666667%;
+        padding: 0.5em 0.25em 0.5em 0.25em;
     }
 
     .menu-item{
         margin-right:1.953125%;
         margin-left:1.953125%;
-        min-height: 6.510416666667%;
-
     }
 }
 
-/** Desktop **/
-@media only screen
-and (min-width:1024px)
-and (max-width:1219px){
-    #menuContainer   {
-        height: 90%;
-        width: 50.25%;
-        top:7.6436%;
-    }
-    #menu ul>li {
-        height: 6.510416666667%;
-    }
 
-    .menu-item{
-        margin-right:1.953125%;
-        margin-left:1.953125%;
-        min-height: 6.510416666667%;
-
-    }
-}
